# mai

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  run.sh  vcpkg.json
.cache/clangd/index/: mai.cpp.113EEDCBFB903CD3.idx  mai.h.5EF0DF51961DB4C6.idx
examples/1.helloWorld/: CMakeLists.txt  main.cpp  main.vert
examples/1.helloWorld/spvs/: main.vspv
examples/2.GLM/: CMakeLists.txt  main.cpp  main.vert
examples/2.GLM/spvs/: main.vspv
examples/3.buffer/: CMakeLists.txt  main.cpp  main.frag  main.vert
examples/3.buffer/spvs/: main.fspv  main.vspv
examples/4.textures/: CMakeLists.txt  main.cpp  main.vert
examples/5.cubemap/: CMakeLists.txt  common.sp  main.cpp  main.frag  main.vert  skybox.frag  skybox.vert
examples/6.compute/: CMakeLists.txt  common.sp  main.comp  main.cpp  main.frag  main.vert
examples/6.fontRendering/: CMakeLists.txt  common.sp  main.cpp  main.frag  main.vert
examples/7.tessellation/: CMakeLists.txt  common.sp  main.cpp  main.frag  main.geom  main.tesc  main.tese  main.vert
examples/UITools/: CMakeLists.txt  main.cpp
examples/fireshow/: CMakeLists.txt  main.cpp  main.frag  main.vert
examples/fonts/: CMakeLists.txt  main.cpp
examples/lighting/: CMakeLists.txt  main.cpp  main.frag  main.vert
mai/: FontRendere.h  FontRenderer.h  ImGuiRenderer.h  UtilsCubemap.h  maiApp.h  mai_config.h  mai_vk.h  mai_vk.h~  uiTools.h  vulkan_context.h  vulkan_utils.h
shaders/: common.sp  font.frag  font.vert  ui.frag  ui.vert
src/: FontRenderer.cpp  ImGuiRenderer.cpp  imguiHelper.cpp  mai.cpp  maiApp.cpp  uiTools.cpp
